// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs/DateTimePicker Date smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="timePicker"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":rq:"
         id=":rq:-label"
  >
    Date Time
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":rq:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="Empty"
              aria-label="Month"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          MM
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="31"
              aria-valuetext="Empty"
              aria-label="Day"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          DD
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="2"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="9999"
              aria-valuetext="Empty"
              aria-label="Year"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          YYYY
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose date"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Date Time
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":rq:"
           aria-hidden="true"
           tabindex="-1"
           value
    >
  </div>
</div>
`;

exports[`Inputs/DateTimePicker FormatAmPm smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="timePicker"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":ri:"
         id=":ri:-label"
  >
    Date Time
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":ri:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="Empty"
              aria-label="Month"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          MM
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="31"
              aria-valuetext="Empty"
              aria-label="Day"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          DD
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="2"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="9999"
              aria-valuetext="Empty"
              aria-label="Year"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          YYYY
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
      <span data-sectionindex="3"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="Empty"
              aria-label="Hours"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          hh
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="4"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-valuetext="Empty"
              aria-label="Minutes"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          mm
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
      <span data-sectionindex="5"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="1"
              aria-valuetext="Empty"
              aria-label="Meridiem"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="text"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          aa
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose date"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Date Time
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":ri:"
           aria-hidden="true"
           tabindex="-1"
           value
    >
  </div>
</div>
`;

exports[`Inputs/DateTimePicker HoursView smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="timePicker"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":r5:"
         id=":r5:-label"
  >
    Date Time
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":r5:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="Empty"
              aria-label="Month"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          MM
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="31"
              aria-valuetext="Empty"
              aria-label="Day"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          DD
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="2"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="9999"
              aria-valuetext="Empty"
              aria-label="Year"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          YYYY
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
      <span data-sectionindex="3"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="23"
              aria-valuetext="Empty"
              aria-label="Hours"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          hh
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose date"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Date Time
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":r5:"
           aria-hidden="true"
           tabindex="-1"
           value
    >
  </div>
</div>
`;

exports[`Inputs/DateTimePicker Localized smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="locale.dateTime"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":rm:"
         id=":rm:-label"
  >
    Data Ore
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":rm:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="Empty"
              aria-label="Month"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          MM
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="31"
              aria-valuetext="Empty"
              aria-label="Day"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          DD
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="2"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="9999"
              aria-valuetext="Empty"
              aria-label="Year"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          YYYY
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
      <span data-sectionindex="3"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="23"
              aria-valuetext="Empty"
              aria-label="Hours"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          hh
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="4"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-valuetext="Empty"
              aria-label="Minutes"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          mm
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose date"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Data Ore
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":rm:"
           aria-hidden="true"
           tabindex="-1"
           value
    >
  </div>
</div>
`;

exports[`Inputs/DateTimePicker MobileView smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="timePicker"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":re:"
         id=":re:-label"
  >
    Date Time
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":re:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuenow="10"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="October"
              aria-label="Month"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          10
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuenow="29"
              aria-valuemin="1"
              aria-valuemax="31"
              aria-valuetext="29"
              aria-label="Day"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          29
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="2"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuenow="2023"
              aria-valuemin="0"
              aria-valuemax="9999"
              aria-label="Year"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          2023
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
      <span data-sectionindex="3"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuenow="6"
              aria-valuemin="0"
              aria-valuemax="23"
              aria-label="Hours"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          06
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="4"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuenow="0"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-label="Minutes"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          00
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="5"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuenow="0"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-label="Seconds"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          00
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose date, selected date is Oct 29, 2023"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Date Time
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":re:"
           aria-hidden="true"
           tabindex="-1"
           value="10/29/2023 06:00:00"
    >
  </div>
</div>
`;

exports[`Inputs/DateTimePicker Primary smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="timePicker"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":r1:"
         id=":r1:-label"
  >
    Date Time
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":r1:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="Empty"
              aria-label="Month"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          MM
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="31"
              aria-valuetext="Empty"
              aria-label="Day"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          DD
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="2"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="9999"
              aria-valuetext="Empty"
              aria-label="Year"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          YYYY
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
      <span data-sectionindex="3"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="23"
              aria-valuetext="Empty"
              aria-label="Hours"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          hh
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="4"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-valuetext="Empty"
              aria-label="Minutes"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          mm
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose date"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Date Time
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":r1:"
           aria-hidden="true"
           tabindex="-1"
           value
    >
  </div>
</div>
`;

exports[`Inputs/DateTimePicker SecondsView smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="timePicker"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":r9:"
         id=":r9:-label"
  >
    Date Time
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":r9:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="12"
              aria-valuetext="Empty"
              aria-label="Month"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          MM
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="1"
              aria-valuemax="31"
              aria-valuetext="Empty"
              aria-label="Day"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          DD
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          /
        </span>
      </span>
      <span data-sectionindex="2"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="9999"
              aria-valuetext="Empty"
              aria-label="Year"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          YYYY
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
      <span data-sectionindex="3"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="23"
              aria-valuetext="Empty"
              aria-label="Hours"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          hh
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="4"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-valuetext="Empty"
              aria-label="Minutes"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          mm
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="5"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-valuetext="Empty"
              aria-label="Seconds"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          ss
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose date"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Date Time
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":r9:"
           aria-hidden="true"
           tabindex="-1"
           value
    >
  </div>
</div>
`;

exports[`Inputs/DateTimePicker Time smoke-test 1`] = `
<div class="MuiFormControl-root MuiPickersTextField-root css-mui-classname"
     data-cy="timePicker"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":ru:"
         id=":ru:-label"
  >
    Date Time
  </label>
  <div aria-invalid="false"
       role="group"
       aria-labelledby=":ru:-label"
       class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-mui-classname"
  >
    <div contenteditable="false"
         tabindex="0"
         class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-mui-classname"
    >
      <span data-sectionindex="0"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="23"
              aria-valuetext="Empty"
              aria-label="Hours"
              aria-disabled="false"
              tabindex="0"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          hh
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
          :
        </span>
      </span>
      <span data-sectionindex="1"
            class="MuiPickersSectionList-section css-mui-classname"
      >
        <span class="MuiPickersInputBase-sectionBefore css-mui-classname">
        </span>
        <span aria-readonly="false"
              aria-valuemin="0"
              aria-valuemax="59"
              aria-valuetext="Empty"
              aria-label="Minutes"
              aria-disabled="false"
              tabindex="-1"
              contenteditable="true"
              role="spinbutton"
              spellcheck="false"
              autocapitalize="none"
              autocorrect="off"
              inputmode="numeric"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-mui-classname"
        >
          mm
        </span>
        <span class="MuiPickersInputBase-sectionAfter css-mui-classname">
        </span>
      </span>
    </div>
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              aria-label="Choose time"
              data-mui-picker-open-button="true"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
        >
          <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z">
          </path>
          <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span class="css-mui-classname">
          Date Time
        </span>
      </legend>
    </fieldset>
    <input class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-mui-classname"
           id=":ru:"
           aria-hidden="true"
           tabindex="-1"
           value
    >
  </div>
</div>
`;
